--- a/style.css
+++ b/style.css
@@ -398,7 +398,7 @@ header {
 
 
     header{
-        max-width: 766px;
+        width: 100vw;
         position: fixed;
        
     }
@@ -451,7 +451,7 @@ header {
 
 
    #partner-area{
-        width: 100%;
+        width: 100vw;
         display: flex;
    } 
 
@@ -460,7 +460,7 @@ header {
    }
 
    .imagem img{
-        gap: 15px;
+        gap: 5px;
    }
 
    /*------------------CONTATC--------------------*/
