--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ header {
 
 
     .container{
-        max-width: 700px;
+        max-width: 600px;
         margin: auto; /*para ele se auto posicionar no meio*/
     }
 /*------------------HEADER--------------------*/
@@ -442,7 +442,6 @@ header {
     }
 
     .content-area1, .content-area2{
-        padding-top: -50px;
         width: 100%;
         padding-left: 0;
     }
@@ -466,14 +465,32 @@ header {
    /*------------------CONTATC--------------------*/
 
    #contact{
-        width: 100%;  
-   }
+    background-color: #071C2A;
+    height: 200px;
+    
+}
 
-   #contatc-area{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-   }
+#contact-area{
+    display: flex;
+    align-items: baseline;
+    flex-direction: column;
+    padding-top: 10px;
+    
+}
+
+.box-contact{
+    padding: 5px;
+}
+
+.box-contact h3{
+    color: white;
+    margin-bottom: 10px;
+}
+.box-contact p{
+    color: white;
+    
+}
+
 
    /*------------------FOOTER--------------------*/
 
